--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "eslint:recommended",
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 2020,
     "sourceType": "module"
   },
   "globals": {
@@ -12,6 +13,7 @@
     "node": true
   },
   "rules": {
+    "strict": 1,
     "array-bracket-spacing": [ 2, "never" ],
     "block-scoped-var": 2,
     "brace-style": [ 1, "1tbs", { "allowSingleLine": true } ],
@@ -66,7 +68,6 @@
         "overrides": {}
     }
     ],
-    "strict": 0,
     "valid-jsdoc": 0,
     "wrap-iife": [ 2, "inside" ]
   }
