--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backbone-api-99xp",
-  "version": "0.10.0-alpha",
+  "version": "0.10.1-alpha",
   "keywords": [
     "util",
     "functional",
@@ -56,8 +56,9 @@
     "terser": "^4.6.11"
   },
   "dependencies": {
-    "app-exception": "^1.0.0-2",
+    "app-exception": "^1.2.1",
     "backbone-request-99xp": "github:brunnofoggia/backbone-request-99xp",
+    "nodejs-base64": "^1.0.3",
     "validate-99xp": "^1.3.2"
   }
 }
