--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backbone-api-99xp",
-  "version": "0.10.1-alpha",
+  "version": "0.10.2-beta",
   "keywords": [
     "util",
     "functional",
