--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
     "weight": "npm run minify | gzip-size | pretty-bytes"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
+    "@babel/preset-env": "^7.13.12",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
-    "docco": "*",
-    "eslint": "^7.6.0",
+    "babel-jest": "^26.6.3",
+    "docco": "^0.8.1",
+    "eslint": "^7.22.0",
     "gzip-size-cli": "^1.0.0",
-    "jest": "^26.0.1",
+    "jest": "^26.6.3",
     "pretty-bytes-cli": "^1.0.0",
     "rollup": "1.10.0",
     "rollup-plugin-babel": "4.3.2",
@@ -53,12 +53,12 @@
     "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-node-resolve": "4.2.3",
     "rollup-plugin-terser": "4.0.4",
-    "terser": "^4.6.11"
+    "terser": "^4.8.0"
   },
   "dependencies": {
     "app-exception": "^1.2.1",
     "backbone-request-99xp": "github:brunnofoggia/backbone-request-99xp",
     "nodejs-base64": "^1.0.3",
-    "validate-99xp": "^1.3.2"
+    "validate-99xp": "^1.3.4"
   }
 }
